cabal-version:       >=1.10
name:                string-test
version:             0.1.0.0
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
build-type:          Simple

executable string-test
  main-is:             Main.hs
  other-modules:       ChunkedAddr Chunked ChunkedO2 Lazy
  build-depends:       base >=4.12 && <4.13,
                       criterion
  ghc-options:         -ddump-to-file -ddump-simpl -ddump-stg -ddump-cmm -ddump-asm
  default-language:    Haskell2010
