cabal-version:       >=1.10
name:                string-test
version:             0.1.0.0
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
build-type:          Simple

executable string-test
  main-is:             Main.hs
  other-modules:       ChunkedAddr Chunked ChunkedO2 Lazy Unroll4 Unroll Unrolled
  build-depends:       base, criterion
  ghc-options:         -ddump-to-file -ddump-simpl -ddump-stg -ddump-cmm -ddump-asm
  ghc-options:         -dsuppress-idinfo -rtsopts -fproc-alignment=64 -dno-typeable-binds
  default-language:    Haskell2010
